@@ -61,7 +61,7 @@ rtcheck_handler_cleanup(struct ged_rtcheck *rtcp)
     }
 
     // FIXME: Windows throws 'invalid handle specified' exception here - is ged_delete_io_handler already closing STDOUT?
-    bu_process_close(rrtp->p, BU_PROCESS_STDOUT);
+    bu_process_file_close(rrtp->p, BU_PROCESS_STDOUT);
 
     /* wait for the forked process */
     retcode = bu_process_wait_n(rrtp->p, 0);
@@ -261,16 +261,16 @@ ged_rtcheck_core(struct ged *gedp, int argc, const char *argv[])
 	return BRLCAD_ERROR;
     }
 
-    fp = bu_process_open(p, BU_PROCESS_STDIN);
+    fp = bu_process_file_open(p, BU_PROCESS_STDIN);
 
     _ged_rt_set_eye_model(gedp, eye_model);
     _ged_rt_write(gedp, fp, eye_model, -1, NULL);
 
-    bu_process_close(p, BU_PROCESS_STDIN);
+    bu_process_file_close(p, BU_PROCESS_STDIN);
 
     /* create the rtcheck struct */
     BU_GET(rtcp, struct ged_rtcheck);
-    rtcp->fp = bu_process_open(p, BU_PROCESS_STDOUT);
+    rtcp->fp = bu_process_file_open(p, BU_PROCESS_STDOUT);
     /* Needed on Windows for successful rtcheck drawing data communication */
     setmode(fileno(rtcp->fp), O_BINARY);
     rtcp->vbp = bv_vlblock_init(&RTG.rtg_vlfree, 32);
